feat: fix SonarQube feedback